# yard

./: .gitignore  Cargo.toml  DESIGN.md  MARKER_SYSTEM.md  README.md  TESTING.md  pyproject.toml
src/: adaptors.rs  config.rs  engine.rs  lib.rs  main.rs  modules.rs  test_support.rs
src/adaptors/: gitignore.rs  pixi.rs  test_harness.rs
src/adaptors/gitignore/fixtures/appends_when_no_fence/: desired.ron  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/create_fresh/: expected.gitignore
src/adaptors/gitignore/fixtures/frozen_block/: expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/in_sync/: desired.ron  expected.actions
src/adaptors/gitignore/fixtures/invalid_omit_warns/: existing.gitignore  expected.actions  expected.gitignore  expected.warnings
src/adaptors/gitignore/fixtures/mixed_retention_and_removal/: desired.ron  existing.gitignore  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/multiple_fences_fresh/: desired.ron  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/multiple_fences_with_existing/: existing.gitignore  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/multiple_stale_managed_fences/: desired.ron  existing.gitignore  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/omit_removes_existing_managed_fence/: existing.gitignore  expected.gitignore  expected.warnings
src/adaptors/gitignore/fixtures/omit_suppresses_emission/: expected.actions
src/adaptors/gitignore/fixtures/overridden_block/: desired.ron  expected.actions
src/adaptors/gitignore/fixtures/overridden_stale_fence_preserved/: existing.gitignore
src/adaptors/gitignore/fixtures/removes_stale_managed_fence/: existing.gitignore  expected.actions  expected.gitignore
src/adaptors/gitignore/fixtures/stale_omit_warns/: existing.gitignore  expected.warnings
src/adaptors/gitignore/fixtures/update_in_place/: desired.ron  existing.gitignore  expected.actions  expected.gitignore
src/adaptors/pixi/: tests.rs
src/modules/: pixi_env.rs  ros_workspace.rs  test_harness.rs
src/yard/: __init__.py  __main__.py  cli.py
src/yard/scaffold/: __init__.py  engine.py  handlers.py  render.py
src/yard/templates/workspace/: .cmake-format  _spec.py  pixi.toml.j2
tests/: apply_gitignore.rs  cli.rs  config.rs  test_scaffold.py
tests/fixtures/config/: invalid_syntax.toml  unknown_key.toml
tests/fixtures/explicit_dest/template/: _spec.py
tests/fixtures/nested_dest/template/: _spec.py
tests/fixtures/ordered/template/: _spec.py
tests/fixtures/strict_undefined/template/: _spec.py
tests/fixtures/templated_basic/: variables.py
tests/fixtures/templated_basic/expected/: pixi.toml
tests/fixtures/templated_basic/template/: _spec.py  pixi.toml.j2
tests/fixtures/verbatim_basic/template/: _spec.py
tests/snapshots/workspace/: .clang-format  .gitignore  .pre-commit-config.yaml  colcon_defaults.yaml  pixi.toml  pyproject.toml
(+82 files in other folders)
