[package]
name = "yard"
version = "0.1.0"
edition = "2024"
description = "ROS 2 workspace orchestrator"
authors = ["Alistair English <hello@alistairenglish.com>"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
pretty_assertions = "1"
ron = "0.8"
tempfile = "3"
