[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yard"
dynamic = ["version"]
description = "Batteries-included ROS2 workspaces"
requires-python = ">=3.10"
dependencies = ["typer"]

[project.scripts]
yard = "yard.cli:app"

[tool.hatch.version]
path = "src/yard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yard"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
typer = "*"

[tool.pixi.pypi-dependencies]
yard = { path = ".", editable = true }

# ROS 2 target Python versions:
#   humble, iron → 3.10
#   jazzy        → 3.12
[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { features = ["py312"] }
py310 = { features = ["py310"] }
py312 = { features = ["py312"] }

[tool.pixi.tasks]
yard = "yard"
