[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yard"
dynamic = ["version"]
description = "Batteries-included ROS2 workspaces"
requires-python = ">=3.10"
dependencies = ["typer", "jinja2"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
yard = "yard.cli:app"

[tool.hatch.version]
path = "src/yard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/yard"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = "3.10.*"
typer = "*"
jinja2 = "*"
pytest = "*"

[tool.pixi.pypi-dependencies]
yard = { path = ".", editable = true }

[tool.pixi.tasks]
yard = "yard"
